fix wrap issue new?

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 html {
     font-family:Georgia, 'Times New Roman', Times, serif;
+    box-sizing: border-box;
 }
 
 body {
